crates/rstest-bdd-macros/tests/fixtures/scenario_out_of_order.stderr
error: No matching step definition found for: Given a step
 --> tests/fixtures/scenario_out_of_order.rs:3:1
  |
3 | #[scenario(path = "../../../../crates/rstest-bdd-macros/tests/features/ambiguous.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
...
